# docker-guide

1. Контейнеры введение/: README.md
2. Образы/: Dockerfile  README.md
3. Container runtime/: README.md
3. Контейнеры/: README.md
4. Docker volumes/: README.md  file.json
4. Докер volumes/: README.md  main.py
5. Multistage build/: Dockerfile  main.cpp
5. Многоэтапная сборка/: CMakeLists.txt  README.md
6. Docker compose/: README.md  docker-compose.yaml
7. Пример образ CUDA/: CMakeLists.txt  Dockerfile  README.md  main.cu
